--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
             <!-- Logo -->
             <div class= "logo">
-                <img src= "images/capital-one-logo.png" alt= "capital one logo" width= "150px">
+                <img src= "images/city-3.jpg" alt= "capital one logo" width= "150px">
             </div>
             
             <!-- Toolbar -->
